login validation and func

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-NEXT_PIXBALL_URL=https://pixball.onrender.com/v1
+NEXT_PUBLIC_PIXBALL_URL=https://pixball.onrender.com/v1
+NEXTAUTH_SECRET=Sh9F9lbVTpkGjf4BPpB2ri2qaQQyZeJZT7JYeFgBsSY
