--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@tanstack/react-table": "^8.11.8",
     "apexcharts": "^3.45.2",
     "clsx": "^2.1.0",
+    "formik": "^2.4.5",
     "next": "14.1.0",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
