--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "apexcharts": "^3.46.0",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-tailwindcss-datepicker": "^1.6.6",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
