--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-tailwindcss-datepicker": "^1.6.6",
+    "tailwind-datepicker-react": "^1.4.3",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
