--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
+    "moment": "^2.30.1",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "react": "^18.2.0",
