--- a/package.json
+++ b/package.json
@@ -26,9 +26,14 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-select": "^5.8.0",
     "react-tailwindcss-datepicker": "^1.6.6",
+    "sonner": "^1.4.3",
+    "swr": "^2.2.5",
     "tailwind-datepicker-react": "^1.4.3",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "yup": "^1.3.3",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
